--- a/weatherapp/index.html
+++ b/weatherapp/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
-        rel="stylesheet">
+    <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
-    <title>Day #1 - Weather App</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico"> 
 </head>
 <body>
     <div class="container">
-        <div class="search-box">
+        <div class="search-tab">
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" placeholder="Enter your location">
             <button class="fa-solid fa-magnifying-glass"></button>
@@ -21,10 +18,10 @@
 
         <div class="not-found">
             <img src="images/404.png">
-            <p>Oops! Invalid location :/</p>
+            <p>Opps! Location not found :/</p>
         </div>
 
-        <div class="weather-box">
+        <div class="weather-card">
             <img src="">
             <p class="temperature"></p>
             <p class="description"></p>
@@ -38,7 +35,6 @@
                     <p>Humidity</p>
                 </div>
             </div>
-
             <div class="wind">
                 <i class="fa-solid fa-wind"></i>
                 <div class="text">
@@ -48,7 +44,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
